assignment 2 initial commit

--- a/Assignment 1/css/main.css
+++ b/Assignment 1/css/main.css
@@ -100,3 +100,8 @@ label {
 .arrayTitle {
   margin-bottom: 10px;
 }
+.finalOutputs {
+  max-width: 100%;
+  overflow: hidden;
+  word-break: break-all;
+}
